# ChangeLog for dev-libs/boost
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Feb 2015; Christoph Junghans <ottxor@gentoo.org> boost-1.56.0-r2.ebuild:
  dropped sparc

*boost-1.56.0-r2 (17 Feb 2015)

  17 Feb 2015; Christoph Junghans <ottxor@gentoo.org> +boost-1.56.0-r2.ebuild,
  +files/boost-1.48.0-disable_icu_rpath.patch,
  +files/boost-1.48.0-disable_libboost_python3.patch,
  +files/boost-1.48.0-no_strict_aliasing_python2.patch,
  +files/boost-1.48.0-python_linking.patch,
  +files/boost-1.51.0-respect_python-buildid.patch,
  +files/boost-1.51.0-support_dots_in_python-buildid.patch,
  +files/boost-1.52.0-threads.patch, +files/boost-1.55.0-context-x32.patch,
  +files/boost-1.55.0-tools-c98-compat.patch,
  +files/boost-1.56.0-build-auto_index-tool.patch, +metadata.xml:
  added full multilib version