@@ -3,34 +3,34 @@
 <pkgmetadata>
   <herd>cpp</herd>
   <use>
-    <flag name='context'>
+    <flag name="context">
       Build and install the Boost.Context library and all other 
       Boostlibraries that depends on it
     </flag>
-    <flag name='tools'>
+    <flag name="tools">
       Build and install the boost tools (bcp, quickbook, inspect,
       wave)
     </flag>
-    <flag name='debug' restrict='&lt;dev-libs/boost-1.50.0-r3'>
+    <flag name="debug" restrict="&lt;dev-libs/boost-1.50.0-r3">
       Build and install debug versions of the Boost libraries. These
       libraries are not used by default, and should not be used unless
       you're developing against Boost.
     </flag>
-    <flag name='debug' restrict='&gt;dev-libs/boost-1.52.0-r2'>
+    <flag name="debug" restrict="&gt;dev-libs/boost-1.52.0-r2">
       Build and install only the debug version of the Boost
       libraries. Only enable this flag if you're developing against
       boost.
     </flag>
-    <flag name='threads'>
+    <flag name="threads">
       Build multi-thread-compatible libraries instead of
       single-threaded only.
     </flag>
-    <flag name='nls'>
+    <flag name="nls">
       Build libboost_locale. This library requires compatible C
       library interfaces, which might not be provided by uClibc or
       other embedded libraries.
     </flag>
-    <flag name='doc'>
+    <flag name="doc">
       Install the full API documentation documentation. This takes
       over 200MB of extra disk space.
     </flag>
