@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Apr 2015; Justin Lecher <jlec@gentoo.org> boost-1.56.0-r2.ebuild,
+  metadata.xml:
+  dev-libs/boost: Move to new CAT
+
   19 Feb 2015; Christoph Junghans <ottxor@gentoo.org> boost-1.56.0-r2.ebuild:
   dropped sparc
 
